load pps_ldisc before ldattach

--- a/etc/systemd/system/ntpgps-gps-pps@.service
+++ b/etc/systemd/system/ntpgps-gps-pps@.service
@@ -26,6 +26,7 @@ Wants=ntp.service
 [Service]
 Type=simple
 ExecStartPre=/usr/local/bin/ntpgps-ntp-configure.sh %i 1
+ExecStartPre=/usr/sbin/modprobe pps_ldisc
 ExecStart=/usr/sbin/ldattach -d pps /dev/%i
 ExecStartPost=/usr/local/bin/ntpgps-gps-setup.sh %i 1
 ExecStop=/usr/local/bin/ntpgps-gps-stop.sh %i 1
