support additional refclocks

--- a/etc/ntpgps/template/driver20-gpspps-gprmc.conf
+++ b/etc/ntpgps/template/driver20-gpspps-gprmc.conf
@@ -1,5 +1,5 @@
 ################################################################################
-# nmea-gps%N.conf
+# driver20-gpspps-gprmc.conf
 #
 # Copyright (C) 2025 Richard Elwell
 #
@@ -19,13 +19,13 @@
 ################################################################################
 
 # Generic NMEA GPS Receiver
-#  mode is 9600 baud + $GPZDA only
+#  mode is 9600 baud + $GPRMC only
 #  /dev/gpsN for NMEA
 #  /dev/gpsppsN for PPS
 #  https://www.eecis.udel.edu/~mills/ntp/html/drivers/driver20.html
 
 # /dev/gps%N, /dev/gpspps%N
-server 127.127.20.%N mode 24 prefer true # select bitrate, $GPZDA, truechimer
+server 127.127.20.%N mode 17 prefer true # select bitrate, $GPRMC, truechimer
 fudge 127.127.20.%N time1 0.0 time2 0.0 stratum 0 refid GPS flag1 1 flag2 0 flag3 0 flag4 1
 
 # fudge 127.127.20.%N time1 0.0 # Specifies the PPS time offset calibration factor, in seconds and fraction, with default 0.0
