--- a/etc/ntpgps/template/driver20-gpspps-gpzda+gprmc.conf
+++ b/etc/ntpgps/template/driver20-gpspps-gpzda+gprmc.conf
@@ -1,5 +1,5 @@
 ################################################################################
-# nmea-gps%N.conf
+# driver20-gpspps-gpzda-gprmc.conf
 #
 # Copyright (C) 2025 Richard Elwell
 #
@@ -19,19 +19,20 @@
 ################################################################################
 
 # Generic NMEA GPS Receiver
-#  mode is 9600 baud + $GPZDA only
+#  mode is 9600 baud + $GPZDA,$GPRMC only
 #  /dev/gpsN for NMEA
+#  /dev/gpsppsN for PPS
 #  https://www.eecis.udel.edu/~mills/ntp/html/drivers/driver20.html
 
-# /dev/gps%N
-server 127.127.20.%N mode 24 prefer true # select bitrate, $GPZDA, truechimer
-fudge 127.127.20.%N time1 0.0 time2 0.0 stratum 0 refid GPS flag1 0 flag2 0 flag3 0 flag4 1
+# /dev/gps%N, /dev/gpspps%N
+server 127.127.20.%N mode 25 prefer true # select bitrate, $GPZDA+$GPRMC, truechimer
+fudge 127.127.20.%N time1 0.0 time2 0.0 stratum 0 refid GPS flag1 1 flag2 0 flag3 0 flag4 1
 
 # fudge 127.127.20.%N time1 0.0 # Specifies the PPS time offset calibration factor, in seconds and fraction, with default 0.0
 # fudge 127.127.20.%N time2 0.0 # Specifies the serial end of line time offset calibration factor, in seconds and fraction, with default 0.0
 # fudge 127.127.20.%N stratum 0 # Specifies the driver stratum, in decimal from 0 to 15, with default 0.
 # fudge 127.127.20.%N refid GPS # Specifies the driver reference identifier, an ASCII string from one to four characters, with default GPS.
-# fudge 127.127.20.%N flag1 0   # Disable PPS signal processing if 0 (default); enable PPS signal processing if 1.
+# fudge 127.127.20.%N flag1 1   # Disable PPS signal processing if 0 (default); enable PPS signal processing if 1.
 # fudge 127.127.20.%N flag2 0   # If PPS signal processing is enabled, capture the pulse on the rising edge if 0 (default); capture on the falling edge if 1.
 # fudge 127.127.20.%N flag3 0   # If PPS signal processing is enabled, use the ntpd clock discipline if 0 (default); use the kernel discipline if 1.
 # fudge 127.127.20.%N flag4 1   # Obscures location in timecode: 0 for disable (default), 1 for enable.
