--- a/etc/ntpgps/template/driver20-gps-gprmc.conf
+++ b/etc/ntpgps/template/driver20-gps-gprmc.conf
@@ -19,7 +19,7 @@
 ################################################################################
 
 # Generic NMEA GPS Receiver
-#  mode is 9600 baud + $GPRMC
+#  mode is 9600 baud + $GPRMC only
 #  /dev/gpsN for NMEA
 #  https://www.eecis.udel.edu/~mills/ntp/html/drivers/driver20.html
 
