--- a/etc/ntpgps/template/driver20-gpspps-gpzda+gprmc.conf
+++ b/etc/ntpgps/template/driver20-gpspps-gpzda+gprmc.conf
@@ -19,7 +19,7 @@
 ################################################################################
 
 # Generic NMEA GPS Receiver
-#  mode is 9600 baud + $GPZDA,$GPRMC only
+#  mode is 9600 baud + $GPZDA,$GPRMC
 #  /dev/gpsN for NMEA
 #  /dev/gpsppsN for PPS
 #  https://www.eecis.udel.edu/~mills/ntp/html/drivers/driver20.html
