support additional refclocks

--- a/etc/ntpgps/template/driver28-shm.conf
+++ b/etc/ntpgps/template/driver28-shm.conf
@@ -19,13 +19,17 @@
 ################################################################################
 
 # Shared Memory Driver
+#  shared memory segment key value: 0x4E545030 + %N 
 #  https://www.eecis.udel.edu/~mills/ntp/html/drivers/driver28.html
+
+server 127.127.28.%N mode 1 prefer true # safe resource lock, truechimer
+fudge 127.127.28.%N time1 0.0 time2 0.0 stratum 0 refid SHM flag1 0 flag2 0 flag3 0 flag4 0
+
+# SYSV IPC creates a shared memory segment with a key value of 0x4E545030 + u, where u is again the clock unit. (This value could be hex-decoded as 'NTP0', 'NTP1',..., with funny characters for units > 9.)
+# Public access means a permission set of 0666, while private access creates the mapping with a permission set of 0600.
 
 # Mode 0 = simple, assumes writer and reader don’t collide. Works fine in most single-writer, fast system cases.
 # Mode 1 = safer, does an extra consistency check to avoid races. Preferred if your SHM writer supports it.
-
-server 127.127.28.%N mode 1 prefer true # select resource locking, truechimer
-fudge 127.127.28.%N time1 0.0 time2 0.0 stratum 0 refid SHM flag1 0 flag2 0 flag3 0 flag4 0
 
 # fudge 127.127.28.%N time1 0.0 # Specifies the time offset calibration factor, in seconds and fraction, with default 0.0.
 # fudge 127.127.28.%N time2 0.0 # Maximum allowed difference between remote and local clock, in seconds. Values <1.0 or >86400.0 are ignored, and the default value of 4hrs (14400s) is used instead. See also flag 1.
