--- a/etc/ntpgps/template/driver28-shm-pps.conf
+++ b/etc/ntpgps/template/driver28-shm-pps.conf
@@ -1,5 +1,5 @@
 ################################################################################
-# driver22-pps.conf
+# driver28-shm-pps.conf
 #
 # Copyright (C) 2025 Richard Elwell
 #
@@ -18,6 +18,29 @@
 #
 ################################################################################
 
+# Shared Memory Driver
+#  shared memory segment key value: 0x4E545030 + %N 
+#  https://www.eecis.udel.edu/~mills/ntp/html/drivers/driver28.html
+
+server 127.127.28.%N mode 1 prefer true # safe resource lock, truechimer
+fudge 127.127.28.%N time1 0.0 time2 0.0 stratum 0 refid SHM flag1 0 flag2 0 flag3 0 flag4 0
+
+# SYSV IPC creates a shared memory segment with a key value of 0x4E545030 + u, where u is again the clock unit. (This value could be hex-decoded as 'NTP0', 'NTP1',..., with funny characters for units > 9.)
+# Public access means a permission set of 0666, while private access creates the mapping with a permission set of 0600.
+
+# Mode 0 = simple, assumes writer and reader don’t collide. Works fine in most single-writer, fast system cases.
+# Mode 1 = safer, does an extra consistency check to avoid races. Preferred if your SHM writer supports it.
+
+# fudge 127.127.28.%N time1 0.0 # Specifies the time offset calibration factor, in seconds and fraction, with default 0.0.
+# fudge 127.127.28.%N time2 0.0 # Maximum allowed difference between remote and local clock, in seconds. Values <1.0 or >86400.0 are ignored, and the default value of 4hrs (14400s) is used instead. See also flag 1.
+# fudge 127.127.28.%N stratum 0 # Specifies the driver stratum, in decimal from 0 to 15, with default 0.
+# fudge 127.127.28.%N refid SHM # Specifies the driver reference identifier, an ASCII string from one to four characters, with default SHM.
+# fudge 127.127.28.%N flag1 0 # Skip the difference limit check if set. Useful for systems where the RTC backup cannot keep the time over long periods without power and the SHM clock must be able to force long-distance initial jumps. Check the difference limit if cleared (default).
+# fudge 127.127.28.%N flag2 0 # Not used by this driver.
+# fudge 127.127.28.%N flag3 0 # Not used by this driver.
+# fudge 127.127.28.%N flag4 0 # If flag4 is set, clockstats records will be written when the driver is polled.
+
+
 # PPS Clock Discipline
 #  /dev/ppsN
 #  https://www.eecis.udel.edu/~mills/ntp/html/drivers/driver22.html
@@ -34,4 +57,5 @@ fudge 127.127.22.%N time1 0.0 time2 0.0 stratum 0 refid PPS flag1 0 flag2 0 flag
 # fudge 127.127.22.%N flag2 0   # Specifies PPS capture on the rising (assert) pulse edge if 0 (default) or falling (clear) pulse edge if 1. Not used under Windows - if the special serialpps.sys serial port driver is installed then the leading edge will always be used.
 # fudge 127.127.22.%N flag3 0   # Controls the kernel PPS discipline: 0 for disable (default), 1 for enable. Not used under Windows - if the special serialpps.sys serial port driver is used then kernel PPS will be available and used.
 # fudge 127.127.22.%N flag4 0   # Record a timestamp once for each second if 1. Useful for constructing Allan deviation plots.
+
 
