fix comment in driver config file

--- a/etc/ntpgps/template/driver28-shm-pps.conf
+++ b/etc/ntpgps/template/driver28-shm-pps.conf
@@ -19,6 +19,7 @@
 ################################################################################
 
 # Shared Memory Driver
+#  Clock Unit %N
 #  https://www.eecis.udel.edu/~mills/ntp/html/drivers/driver28.html
 
 # Key=0x4E545030+%N
